fixed gri2 to prevent shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -349,6 +349,7 @@ nav ul li :hover {
   max-width: 60vw;
   max-width: 60%;
   height: auto;
+  min-height: 5vh;
   margin: 5em auto;
 }
 
@@ -386,10 +387,9 @@ nav ul li :hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 65vw;
+  max-width: 100vw;
   width: 100%;
   height: auto;
-  margin: 0 auto;
 }
 
 .grid2-section2 img {
@@ -397,14 +397,6 @@ nav ul li :hover {
   height: auto;
   object-fit: cover;
   aspect-ratio: 16 / 9;
-}
-
-.grid2-section2 img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  display: block;
-  aspect-ratio: 7 / 4;
 }
 
 .categories,
@@ -2003,7 +1995,7 @@ button.btn5:hover {
     margin-right: 2em;
     flex: 1;
     height: auto;
-    min-height: 2vh;
+    min-height: 1vh;
     width: 40vw;
     max-width: 45vw;
   }
@@ -2018,7 +2010,7 @@ button.btn5:hover {
   }
 
   .search-container input::placeholder {
-    font-size: 3vw;
+    font-size: 2.5vw;
   }
 
   .nav-menu {
@@ -2029,7 +2021,7 @@ button.btn5:hover {
     display: flex;
     height: auto;
     min-height: 2vh;
-    width: 40vw;
+    width: 35vw;
     max-width: 40vw;
   }
 
